# KLIK-Bench

./: .gitignore  CITATION.cff  README.md  pyproject.toml
data/: metadata.yaml  personas.jsonl  tasks.jsonl
data/personas/: persona-001.yaml  persona-002.yaml  persona-003.yaml  persona-004.yaml  persona-005.yaml  persona-006.yaml  persona-007.yaml  persona-008.yaml
data/tasks/: kb-001.yaml  kb-002.yaml  kb-003.yaml  kb-004.yaml  kb-005.yaml  kb-006.yaml  kb-007.yaml  kb-008.yaml  kb-009.yaml  kb-010.yaml  kb-011.yaml  kb-012.yaml  kb-013.yaml  kb-014.yaml  kb-015.yaml  kb-016.yaml  kb-017.yaml  kb-018.yaml  kb-019.yaml  kb-020.yaml  kb-021.yaml  kb-022.yaml  kb-023.yaml  kb-024.yaml  kb-025.yaml  kb-026.yaml  kb-027.yaml  kb-028.yaml  kb-029.yaml  kb-030.yaml  kb-031.yaml  kb-032.yaml  kb-033.yaml  kb-034.yaml  kb-035.yaml  kb-036.yaml  kb-037.yaml  kb-038.yaml  kb-039.yaml  kb-040.yaml  (+10 more)
docs/: CONTRIBUTING.md
klik_bench/: __init__.py
klik_bench/agents/: __init__.py  anthropic_agent.py  base.py  dummy.py  openai_agent.py
klik_bench/harness/: __init__.py  benchmark.py  evaluator.py  runner.py
klik_bench/mock_backends/: __init__.py  base.py  fictional.py  github.py  google.py  jira.py  linear.py  notion.py  slack.py  system.py  web_search.py
klik_bench/models/: __init__.py  observation.py  persona.py  scoring.py  task.py  tool_adapter.py
paper/: main.bbl  main.tex  neurips_2024.sty  references.bib
scripts/: generate_report.py  run_benchmark.py  upload_to_hf.py
tests/: conftest.py
tool_adapters/: datapipe.yaml  gh.yaml  linear.yaml  microsoft.yaml
(+38 files in other folders)
